chore: clean up docExplore search elements in single row

--- a/templates/docExplore.html
+++ b/templates/docExplore.html
@@ -26,7 +26,7 @@
 
 				<!-- input -->
 			    <div class="row">
-			    	<div class="col-md-2">
+			    	<div class="col-md-4">
 <!--			            <input id="doc_id" name="doc_id" type="text" class="form-control" placeholder="Enter doc id" size="30"/>-->
 						<select name="text_abbreviation_input" id="text_abbreviation_input" class="form-control">
 							<option value="" size="15" selected="selected">Select text</option>
@@ -34,34 +34,29 @@
 			        </div>
 					<div class="col-md-3">
 						<select name="local_doc_id_input" id="local_doc_id_input" class="form-control">
-							<option value="" size="15" selected="selected">Select query doc id</option>
+							<option value="" size="15" selected="selected">Select doc id</option>
 						</select>
 			        </div>
-			        <div class="col-md-1">
+					<div class="col-md-3">
+						<select name="local_doc_id_input_2" id="local_doc_id_input_2" class="form-control">
+							<option value="" size="15" selected="selected">Second doc id (batch mode only)</option>
+						</select>
+			        </div>
+			        <div class="col-md-2">
 			            <input id="doc_explore_submit_button" type="submit" class="btn btn-block btn-primary" value="Submit"/>
 			        </div>
 			    </div>
 				<br>
-				<div class="row">
-			    	<div class="col-md-2">
-			        </div>
-					<div class="col-md-3">
-						<select name="local_doc_id_input_2" id="local_doc_id_input_2" class="form-control">
-							<option value="" size="15" selected="selected">Subsequent doc id (batch mode)</option>
-						</select>
-			        </div>
-					<div class="col-md-1">
-			        </div>
-			    </div>
-				<br>
 				<div class="row" id="sw_threshold_slider_row" style='display: none;'>
-					<div class="col-md-2">
+					<div class="col-md-4">
 			        </div>
-					<div class="col-md-3" class="range">
+					<div class="col-md-5" class="range">
 						<input type="range" class="form-range" name="sw_threshold" id="sw_threshold" min="20" max="200" step="10" value="50"/>
 			        </div>
 					<div class="col-md-1">
 						<p id="sw_threshold_slider_label">sw score > 50</p>
+			        </div>
+					<div class="col-md-2">
 			        </div>
 				</div>
 
@@ -139,7 +134,7 @@
 	  		sw_threshold_slider_row.style.display = "block";
 	  	}
 
-	  	sw_threshold.onchange = function() {
+	  	sw_threshold.oninput = function() {
 	  		var sw_threshold_slider_label = document.getElementById("sw_threshold_slider_label");
 	  		sw_threshold_slider_label.innerHTML = `sw score > ` + sw_threshold.value;
 	  	}
