fix: restore smaller button

--- a/templates/docExplore.html
+++ b/templates/docExplore.html
@@ -42,9 +42,11 @@
 							<option value="" size="15" selected="selected">Second doc id (batch mode only)</option>
 						</select>
 			        </div>
-			        <div class="col-md-2">
+			        <div class="col-md-1">
 			            <input id="doc_explore_submit_button" type="submit" class="btn btn-block btn-primary" value="Submit"/>
 			        </div>
+					<div class="col-md-1">
+					</div>
 			    </div>
 				<br>
 				<div class="row" id="sw_threshold_slider_row" style='display: none;'>
