fix: adjust to single text box with toggle

--- a/templates/docExploreInner.html
+++ b/templates/docExploreInner.html
@@ -66,30 +66,27 @@
 
     </div>
 
-<!-- TEXT TYPE TOGGLE BLOCK -->
-<div class="panel panel-default" style="margin-bottom: 10px;">
-  <div class="panel-body" style="padding: 5px 10px;">
+    <!-- TEXT TYPE TOGGLE BLOCK -->
+    <div class="panel panel-default" style="margin-bottom: 10px;">
+      <div class="panel-body" style="padding: 10px;">
 
-    <div class="btn-toolbar" style="margin: 0;">
-      <div class="btn-group" style="margin-right: 10px; vertical-align: middle;">
-        <strong style="line-height: 30px;">Text type:</strong>
-      </div>
-      <div class="btn-group btn-group-sm">
-        <button id="btn-original"  class="btn btn-primary btn-sm">Original</button>
-        <button id="btn-segmented" class="btn btn-default btn-sm">Segmented</button>
+        <div class="btn-toolbar" style="margin: 0 0 10px 0;">
+          <div class="btn-group" style="margin-right: 10px; vertical-align: middle;">
+            <strong style="line-height: 30px;">Text type:</strong>
+          </div>
+          <div class="btn-group btn-group-sm">
+            <button id="btn-original"  class="btn btn-primary btn-sm">Original</button>
+            <button id="btn-segmented" class="btn btn-default btn-sm">Segmented</button>
+          </div>
+        </div>
+
+        <!-- TEXT CONTAINER -->
+        <div id="text-container">
+        <!-- JS will inject the text here -->
+        </div>
+
       </div>
     </div>
-
-  </div>
-</div>
-
-<!-- TEXT CONTAINER -->
-<div class="panel panel-default">
-  <div id="text-container" class="panel-body">
-    <!-- JS will inject the text here -->
-  </div>
-</div>
-
 
     <!-- 3) TOPIC ANALYSIS -->
 	<div class="col-md-6 mb-5">
