--- a/templates/docExploreInner.html
+++ b/templates/docExploreInner.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <h1 style="margin-top: 0px; margin-bottom: 10px;">
+    <h1 style="margin-top: 0px">
       $query_id <small><small>($query_section)</small></small>
     </h1>
   </div>
@@ -80,7 +80,7 @@
     <input type="hidden" id="text_type_toggle_value" value="$text_type_toggle">
 
     <!-- TEXT TYPE TOGGLE -->
-    <div class="panel panel-default" style="margin-top: 30px">
+    <div class="panel panel-default">
       <div class="panel-body" style="padding: 10px;">
 
         <div class="btn-toolbar" style="margin: 0 0 10px 0;">
